:bug: fix: 修复创建草稿和添加轨道请求的字段，更新相关文档描述
